--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
             <a href="#/about" data-route="about" class="tab">About Me</a>
             <a href="#/projects" data-route="projects" class="tab">Projects</a>
             <a href="#/resume" data-route="resume" class="tab">Resume</a>
+            <a href="#/contact" data-route="contact" class="tab">Contact</a>
             <span class="tab-underline" aria-hidden="true"></span>
           </nav>
           <button id="themeToggle" class="icon-button" aria-label="Toggle theme">
