--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header class="site-header glass">
       <div class="container nav">
         <div class="brand">
-          <img src="assets/logo.svg" alt="Nive Venkat" class="logo-img" />
+          <img src="assets/logo.png" alt="Nive Venkat" class="logo-img" />
           <a href="#/about" class="brand-name">Nive Venkat</a>
         </div>
         <div class="actions">
