Updated footnote to include Codex

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </header>
     <main id="app" class="container"></main>
     <footer class="site-footer container">
-      <p>© <span id="year"></span> Nive Venkat. All rights reserved.</p>
+      <p>© <span id="year"></span> Nive Venkat. All rights reserved. Built with <a href="https://openai.com/codex/" target="_blank" rel="noreferrer">OpenAI Codex</a>.</p>
     </footer>
     <script src="vendor/mermaid.min.js"></script>
     <script type="module" src="scripts/theme.js"></script>
